replace if...else statement with ternary operator